fixed minor layout issue

--- a/src/style.css
+++ b/src/style.css
@@ -4,6 +4,8 @@ body {
   padding: 0;
   width: 100%;
   height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 #root {
@@ -21,7 +23,7 @@ body {
   flex-direction: column;
   align-items: center;
   height: 100%;
-  padding: 5rem 0rem;
+  padding: 5rem 1rem;
 }
 
 .wooow.reactApp {
